--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,10 +10,5 @@
 	</title>
 	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
-  <style>
-  body {
-    max-width:1000px;
-    margin:0 auto;
-  }
-  </style>
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 </head>
