--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
-<footer>
-	<p>Made with ❤︎ from the community of <a href="https://theqrl.org">The QRL</a>. 
-	<br>Join our <a href="https://discord.gg/yA2vjU6">Discord</a>, <a href="https://reddit.com/r/qrl">Reddit</a>, or follow us on <a href="https://twitter.com/qrledger">Twitter</a></p>
+<footer class="grid">
+	<div class="w12">
+		<p>Made with ❤︎ from the community of <a href="https://theqrl.org">The QRL</a>. 
+		<br>Join our <a href="https://discord.gg/yA2vjU6">Discord</a>, <a href="https://reddit.com/r/qrl">Reddit</a>, or follow us on <a href="https://twitter.com/qrledger">Twitter</a></p>
+	</div>
 </footer>
 
 <script type="text/javascript">
